--- a/ch_app/app.json
+++ b/ch_app/app.json
@@ -8,7 +8,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#7c90a0"
+      "backgroundColor": "#532F83"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -20,7 +20,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#577399"
+        "backgroundColor": "#532F83"
       }
     },
     "web": {
