added header, moved drawer, implemented MORE new styling, bouncycheckbox rocks, the work continues!

--- a/ch_app/package.json
+++ b/ch_app/package.json
@@ -23,6 +23,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-bouncy-checkbox": "^2.1.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-material-buttons": "^0.6.0",
     "react-native-paper": "^4.7.2",
