--- a/ch_app/package.json
+++ b/ch_app/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.7",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/drawer": "^5.12.5",
+    "@react-navigation/material-bottom-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "anonymous-files": "^1.0.1",
@@ -30,7 +32,10 @@
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
+    "react-query": "^3.13.12",
+    "undefined": "react-native-vector-icons/MaterialCommunityIcons",
     "yup": "^0.32.9"
   },
   "devDependencies": {
