--- a/ch_app/package.json
+++ b/ch_app/package.json
@@ -35,8 +35,8 @@
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-query": "^3.13.12",
-    "undefined": "react-native-vector-icons/MaterialCommunityIcons",
-    "yup": "^0.32.9"
+    "yup": "^0.32.9",
+    "expo-secure-store": "~10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
