--- a/ch_app/package.json
+++ b/ch_app/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.21.1",
     "expo": "~41.0.0",
     "expo-image-picker": "~10.1.3",
+    "expo-secure-store": "~10.1.0",
     "expo-sharing": "~9.1.2",
     "expo-status-bar": "~1.0.4",
     "formik": "^2.2.6",
@@ -35,8 +36,7 @@
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-query": "^3.13.12",
-    "yup": "^0.32.9",
-    "expo-secure-store": "~10.1.0"
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
