--- a/ch_app/package.json
+++ b/ch_app/package.json
@@ -36,7 +36,8 @@
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-query": "^3.13.12",
-    "yup": "^0.32.9"
+    "yup": "^0.32.9",
+    "@react-native-async-storage/async-storage": "^1.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
